# BrowserChooser

./: CMakeLists.txt
resources/: app.qrc  com.github.dmitrmax.BrowserChooser.desktop
src/: BrowserConfig.cpp  BrowserConfig.h  BrowserManager.cpp  BrowserManager.h  ChoiceEditorDialog.cpp  ChoiceEditorDialog.h  ChoiceStore.cpp  ChoiceStore.h  ConfigDialog.cpp  ConfigDialog.h  Info.plist.in  MacDefault.mm  MainWindow.cpp  MainWindow.h  UrlUtils.cpp  UrlUtils.h  main.cpp
translations/: BrowserChooser_de_DE.ts  BrowserChooser_ru_RU.ts
